--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
       <div class="row">
         <p>Joseph Z</p>
         <p>
-          I'm a designer experimenting with interaction, data, and
-          conversational design. I explore new ways for people to engage with
-          user interfaces. Through my work, I strive to humanize complex ideas
-          and questions.
+          I'm a designer exploring interaction, data, and conversation. I
+          experiment with new ways for people to engage with user interfaces.
+          Through my work, I strive to humanize complex ideas and questions.
           <br /><br />Currently, I'm a third-year undergraduate studying
           <a
             class="cmu-design"
