--- a/index.html
+++ b/index.html
@@ -78,14 +78,6 @@
       <div class="row">
         <p>Work</p>
         <div class="projects">
-          <!-- <span
-            ><a
-              target="_blank"
-              href="https://www.catalyst.tedxcmu.org"
-              class="tedx"
-              >TEDxCMU: Catalyst</a
-            ></span
-          > -->
           <span
             ><a
               target="_blank"
@@ -158,6 +150,16 @@
             <p>
               Interaction Design Intern<br />
               05.2020 - 08.2020
+            </p>
+          </div>
+
+          <div class="experience">
+            <a class="apple" target="blank" href="https://www.hcii.cmu.edu"
+              >CMU HCI Institute</a
+            >
+            <p>
+              Research Assistant<br />
+              01.2020 - 05.2020
             </p>
           </div>
 
