--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
             >
             <p>
               Interface Design Intern<br />
-              09.2020 - Present
+              09.2020 - 05.2021
             </p>
           </div>
-
           <div class="experience">
             <a class="apple" target="blank" href="https://www.apple.com/siri/"
               >Apple</a
             >
             <p>
               Interaction Design Intern<br />
+              <!-- 05.2021 - Present<br /> -->
               05.2020 - 08.2020
             </p>
           </div>
 
           <div class="experience">
-            <a class="apple" target="blank" href="https://www.hcii.cmu.edu"
+            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
               >CMU HCI Institute</a
             >
             <p>
