--- a/index.html
+++ b/index.html
@@ -25,176 +25,183 @@
 
   <!-- <body onload="followMouse();"> -->
   <body class="index">
-    <div class="media">
-      <video class="thinkspace-video" playsinline loop muted>
-        <source src="public/thinkspace.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
-      <video class="pixel-push-video" playsinline loop muted>
-        <source src="public/pixel-push.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
-      <video class="reading-trends-video" playsinline loop muted>
-        <source src="public/reading-trends.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
-      <video class="apple-video" playsinline loop muted>
-        <source src="public/apple.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
-      <video class="natural-video" playsinline loop muted>
-        <source src="public/natural.mp4" type="video/mp4" />
-        Your browser does not support HTML video.
-      </video>
-      <img class="elevation-church-img" src="public/elevation-church.jpg" />
-      <img class="tedx-img" src="public/tedx.jpg" />
-      <img class="aiga-img" src="public/aiga.jpg" />
-      <img class="elevation-connect-img" src="public/elevation-connect.jpg" />
-      <img class="cmu-design-img" src="public/cmu-design.jpg" />
-      <img class="hci-img" src="public/hci.jpg" />
-      <img class="plume-img" src="public/plume.jpg" />
-    </div>
     <div class="landing">
-      <div class="row">
-        <p>Joseph Z</p>
-        <p>
-          I'm a designer exploring interaction, data, and conversation. I
-          experiment with new ways for people to engage with user interfaces.
-          Through my work, I strive to humanize complex ideas and questions.
-          <br /><br />Currently, I'm a third-year undergraduate studying
-          <a
-            class="cmu-design"
-            target="blank"
-            href="https://design.cmu.edu/programs/undergrad"
-            >Design</a
-          >
-          and
-          <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-            >Human-Computer Interaction</a
-          >
-          at Carnegie Mellon University.
-        </p>
-      </div>
-      <div class="row">
-        <p>Work</p>
-        <div class="projects">
-          <span
-            ><a
-              target="_blank"
-              href="https://www.notion.so/josephhhz/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-              class="aiga"
-              >AIGA & Hue</a
-            ></span
-          >
-          <span
-            ><a
-              class="thinkspace"
-              target="_blank"
-              href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-              >Thinkspace</a
-            ></span
-          >
-          <span
-            ><a
-              class="elevation-connect"
-              target="_blank"
-              href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-              >Elevation Connect</a
-            ></span
-          >
-          <span
-            ><a
-              class="plume"
-              target="_blank"
-              href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
-              >Plume Assistant</a
-            ></span
-          >
-
-          <span
-            ><a
-              class="reading-trends"
-              target="_blank"
-              href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-              >Reading Trends</a
-            ></span
-          >
-
-          <span
-            ><a
-              class="pixel-push"
-              target="_blank"
-              href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-              >Pixel Push</a
-            ></span
-          >
-        </div>
-      </div>
-      <div class="row">
-        <p>Experience</p>
-        <div>
-          <div class="experience">
-            <a class="natural" target="_blank" href="https://www.natural.ai/"
-              >Brain Technologies</a
-            >
-            <p>
-              Interface Design Intern<br />
-              09.2020 - 05.2021
-            </p>
-          </div>
-          <div class="experience">
-            <a class="apple" target="blank" href="https://www.apple.com/siri/"
-              >Apple</a
-            >
-            <p>
-              Interaction Design Intern<br />
-              <!-- 05.2021 - Present<br /> -->
-              05.2020 - 08.2020
-            </p>
-          </div>
-
-          <div class="experience">
-            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-              >CMU HCI Institute</a
-            >
-            <p>
-              Research Assistant<br />
-              01.2020 - 05.2020
-            </p>
-          </div>
-
-          <div class="experience">
+      <div class="row-container">
+        <div class="row">
+          <p>Joseph Z</p>
+          <p>
+            I'm a designer exploring interaction, data, and conversation. I
+            experiment with new ways for people to engage with user interfaces.
+            Through my work, I strive to humanize complex ideas and questions.
+            <br /><br />Currently, I'm a third-year undergraduate studying
             <a
-              class="elevation-church"
-              target="_blank"
-              href="https://www.elevationchurch.org/"
-              >Elevation Church</a
+              class="cmu-design"
+              target="blank"
+              href="https://design.cmu.edu/programs/undergrad"
+              >Design</a
             >
-            <p>
-              UX Design Intern<br />
-              05.2019 - 08.2019
-            </p>
+            and
+            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+              >Human-Computer Interaction</a
+            >
+            at Carnegie Mellon University.
+          </p>
+        </div>
+        <div class="row">
+          <p>Work</p>
+          <div class="projects">
+            <span>
+              <a
+                class="aiga"
+                target="_blank"
+                href="https://www.notion.so/josephhhz/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+                >AIGA & Hue</a
+              ></span
+            >
+            <span>
+              <a
+                class="thinkspace"
+                target="_blank"
+                href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+                >Thinkspace</a
+              ></span
+            >
+            <span>
+              <a
+                class="elevation-connect"
+                target="_blank"
+                href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+                >Elevation Connect</a
+              ></span
+            >
+            <span
+              ><a
+                class="plume"
+                target="_blank"
+                href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
+                >Plume Assistant</a
+              ></span
+            >
+
+            <span>
+              <a
+                class="reading-trends"
+                target="_blank"
+                href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+                >Reading Trends</a
+              ></span
+            >
+
+            <span
+              ><a
+                class="pixel-push"
+                target="_blank"
+                href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+                >Pixel Push</a
+              ></span
+            >
           </div>
         </div>
-      </div>
-      <footer class="row">
-        <span></span>
-        <div class="contact">
-          <a class="indent" target="_blank" href="resume-zhang.pdf">Resume</a>
-          <a
-            class="indent"
-            target="_blank"
-            href="https://www.linkedin.com/in/josephzme/"
-            >LinkedIn</a
-          >
-          <a
-            class="indent"
-            target="_blank"
-            href="https://www.instagram.com/josephhhz/"
-            >Instagram</a
-          >
+        <div class="row">
+          <p>Experience</p>
+          <div>
+            <div class="experience">
+              <a class="natural" target="_blank" href="https://www.natural.ai/"
+                >Brain Technologies</a
+              >
+              <p>
+                Interface Design Intern<br />
+                09.2020 - 05.2021
+              </p>
+            </div>
+            <div class="experience">
+              <a class="apple" target="blank" href="https://www.apple.com/siri/"
+                >Apple</a
+              >
+              <p>
+                Interaction Design Intern<br />
+                <!-- 05.2021 - Present<br /> -->
+                05.2020 - 08.2020
+              </p>
+            </div>
+
+            <div class="experience">
+              <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+                >CMU HCI Institute</a
+              >
+              <p>
+                Research Assistant<br />
+                01.2020 - 05.2020
+              </p>
+            </div>
+
+            <div class="experience">
+              <a
+                class="elevation-church"
+                target="_blank"
+                href="https://www.elevationchurch.org/"
+                >Elevation Church</a
+              >
+              <p>
+                UX Design Intern<br />
+                05.2019 - 08.2019
+              </p>
+            </div>
+          </div>
         </div>
-      </footer>
+        <footer class="row">
+          <span></span>
+          <div class="contact">
+            <a class="indent" target="_blank" href="resume-zhang.pdf">Resume</a>
+            <a
+              class="indent"
+              target="_blank"
+              href="https://www.linkedin.com/in/josephzme/"
+              >LinkedIn</a
+            >
+            <a
+              class="indent"
+              target="_blank"
+              href="https://www.instagram.com/josephhhz/"
+              >Instagram</a
+            >
+          </div>
+        </footer>
+      </div>
+      <div class="media">
+        <video class="pixel-push hoverCard" playsinline loop muted>
+          <source src="public/pixel-push.mp4" type="video/mp4" />
+          Your browser does not support HTML video.
+        </video>
+        <video class="thinkspace hoverCard" playsinline loop muted>
+          <source src="public/thinkspace.mp4" type="video/mp4" />
+          Your browser does not support HTML video.
+        </video>
+        <!-- <video class="apple hoverCard" playsinline loop muted>
+          <source src="public/apple.mp4" type="video/mp4" />
+          Your browser does not support HTML video.
+        </video> -->
+
+        <video class="reading-trends hoverCard" playsinline loop muted>
+          <source src="public/reading-trends.mp4" type="video/mp4" />
+          Your browser does not support HTML video.
+        </video>
+        <img
+          class="elevation-church hoverCard"
+          src="public/elevation-church.jpg"
+        />
+        <img
+          class="elevation-connect hoverCard"
+          src="public/elevation-connect.jpg"
+        />
+        <img class="apple hoverCard" src="public/apple-2.png" />
+        <img class="tedx hoverCard" src="public/tedx.jpg" />
+        <img class="natural hoverCard" src="public/natural.jpg" />
+        <img class="aiga hoverCard" src="public/aiga.jpg" />
+        <img class="cmu-design hoverCard" src="public/cmu-design.jpg" />
+        <img class="hci hoverCard" src="public/hci-2.png" />
+        <img class="plume hoverCard" src="public/plume.jpg" />
+      </div>
     </div>
   </body>
   <script
