--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Joseph Zhang" />
     <meta
       name="description"
-      content="Joseph is a designer exploring various forms of of multimodal interaction."
+      content="Joseph is a designer exploring various forms of multimodal interaction."
     />
 
     <meta
@@ -169,38 +169,77 @@
         </footer>
       </div>
       <div class="media">
-        <video class="pixel-push hoverCard" playsinline loop muted>
-          <source src="public/pixel-push.mp4" type="video/mp4" />
-          Your browser does not support HTML video.
-        </video>
-        <video class="thinkspace hoverCard" playsinline loop muted>
-          <source src="public/thinkspace.mp4" type="video/mp4" />
-          Your browser does not support HTML video.
-        </video>
-        <!-- <video class="apple hoverCard" playsinline loop muted>
-          <source src="public/apple.mp4" type="video/mp4" />
-          Your browser does not support HTML video.
-        </video> -->
+        <!-- projects -->
+        <div class="aiga hoverCard">
+          <img src="public/aiga.jpg" />
+          <p>
+            Interactive data visualization of +9400 designers from AIGA's design
+            census
+          </p>
+        </div>
+        <div class="elevation-connect hoverCard">
+          <img src="public/elevation-connect.jpg" />
+          <p>Web app designed to help people find community in the church</p>
+        </div>
 
-        <video class="reading-trends hoverCard" playsinline loop muted>
-          <source src="public/reading-trends.mp4" type="video/mp4" />
-          Your browser does not support HTML video.
-        </video>
-        <img
-          class="elevation-church hoverCard"
-          src="public/elevation-church.jpg"
-        />
-        <img
-          class="elevation-connect hoverCard"
-          src="public/elevation-connect.jpg"
-        />
+        <div class="reading-trends hoverCard">
+          <video playsinline loop muted>
+            <source src="public/reading-trends.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <p>
+            Interactive website relating NYT Best Selling books and Google
+            Trends
+          </p>
+        </div>
+        <div class="pixel-push hoverCard">
+          <video playsinline loop muted>
+            <source src="public/pixel-push.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <p>
+            Collaborative painting experience using sounds, textures, and colors
+          </p>
+        </div>
+
+        <div class="thinkspace hoverCard">
+          <video playsinline loop muted>
+            <source src="public/thinkspace.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <p>
+            A speculative exploration of conversational agents in
+            discussion-based contexts
+          </p>
+        </div>
+
         <img class="apple hoverCard" src="public/apple-2.png" />
         <img class="tedx hoverCard" src="public/tedx.jpg" />
-        <img class="natural hoverCard" src="public/natural.jpg" />
-        <img class="aiga hoverCard" src="public/aiga.jpg" />
-        <img class="cmu-design hoverCard" src="public/cmu-design.jpg" />
+
+        <div class="plume hoverCard">
+          <img src="public/plume.jpg" />
+          <p>Designing voice assistants for people with Parkinson's Disease</p>
+        </div>
+        <!-- experiences  -->
+        <div class="elevation-church hoverCard">
+          <img src="public/elevation-church.jpg" />
+          <p>
+            12 weeks in Charlote, NC with some of the most passionate people I
+            know
+          </p>
+        </div>
+        <div class="natural hoverCard">
+          <img src="public/natural.jpg" />
+          <p>
+            Worked on experimental hybrid speech-GUI experiences focused around
+            search
+          </p>
+        </div>
+        <div class="cmu-design hoverCard">
+          <img src="public/cmu-design.jpg" />
+          <p>My cute design cohort + some cool professors</p>
+        </div>
         <img class="hci hoverCard" src="public/hci-2.png" />
-        <img class="plume hoverCard" src="public/plume.jpg" />
       </div>
     </div>
   </body>
