--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </p>
         </div>
 
-        <img class="apple hoverCard" src="public/apple-2.png" />
+        <img class="apple hoverCard" src="public/apple.png" />
         <img class="tedx hoverCard" src="public/tedx.jpg" />
 
         <div class="plume hoverCard">
@@ -224,8 +224,8 @@
         <div class="elevation-church hoverCard">
           <img src="public/elevation-church.jpg" />
           <p>
-            12 weeks in Charlote, NC with some of the most passionate people I
-            know
+            12 weeks in Charlotte, North Carolina with some of the most
+            passionate people I know
           </p>
         </div>
         <div class="natural hoverCard">
