--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         <div class="elevation-connect hoverCard">
           <img src="public/elevation-connect.jpg" />
-          <p>Web app designed to help people find community in the church</p>
+          <p>Web app designed to help people join communities in the church</p>
         </div>
 
         <div class="reading-trends hoverCard">
