--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Thanks for checking out my site! The Siri and Natural AI animations are pulled from their respective sites. All other videos are rightfully owned. -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +21,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
   </head>
 
-  <!-- <body onload="followMouse();"> -->
   <body class="index">
     <div class="landing">
       <div class="row-container">
@@ -239,7 +236,7 @@
           <img src="public/cmu-design.jpg" />
           <p>My cute design cohort + some cool professors</p>
         </div>
-        <img class="hci hoverCard" src="public/hci-2.png" />
+        <img class="hci hoverCard" src="public/hci-2.jpg" />
       </div>
     </div>
   </body>
@@ -248,19 +245,5 @@
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
   ></script>
-
-  <!-- <script src="script/ball.js"></script> -->
   <script src="script/imageHover.js"></script>
-  <script>
-    jQuery(function ($) {
-      $("a").hover(
-        function () {
-          $(".ball").addClass("ballHighlighted");
-        },
-        function () {
-          $(".ball").removeClass("ballHighlighted");
-        }
-      );
-    });
-  </script>
 </html>
