--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
             </div>
 
             <div class="experience">
-              <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+              <a
+                class="hci-research"
+                target="blank"
+                href="https://www.hcii.cmu.edu"
                 >CMU HCI Institute</a
               >
               <p>
@@ -201,7 +204,7 @@
 
         <div class="thinkspace hoverCard">
           <video playsinline loop muted>
-            <source src="public/thinkspace.mp4" type="video/mp4" />
+            <source src="public/thinkspace-2.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
           <p>
@@ -210,8 +213,17 @@
           </p>
         </div>
 
-        <img class="apple hoverCard" src="public/apple.png" />
-        <img class="tedx hoverCard" src="public/tedx.jpg" />
+        <!-- <img class="apple hoverCard" src="public/apple.jpg" /> -->
+        <div class="apple hoverCard">
+          <video playsinline loop muted>
+            <source src="public/apple.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <p>
+            Designed platform-level voice UI patterns based on a core technology
+            enhancement
+          </p>
+        </div>
 
         <div class="plume hoverCard">
           <img src="public/plume.jpg" />
@@ -236,7 +248,14 @@
           <img src="public/cmu-design.jpg" />
           <p>My cute design cohort + some cool professors</p>
         </div>
-        <img class="hci hoverCard" src="public/hci-2.jpg" />
+        <img class="hci hoverCard" src="public/hci.jpg" />
+        <div class="hci-research hoverCard">
+          <img src="public/hci-research.jpg" />
+          <p>
+            Conducted HRI field research focused on navigating stuck-robot
+            situations
+          </p>
+        </div>
       </div>
     </div>
   </body>
