--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         <div class="thinkspace hoverCard">
           <video playsinline loop muted>
-            <source src="public/thinkspace-2.mp4" type="video/mp4" />
+            <source src="public/thinkspace.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
           <p>
