--- a/index.html
+++ b/index.html
@@ -152,18 +152,15 @@
         <footer class="row">
           <span></span>
           <div class="contact">
+            <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
+              >Email</a
+            >
             <a class="indent" target="_blank" href="resume-zhang.pdf">Resume</a>
             <a
               class="indent"
               target="_blank"
               href="https://www.linkedin.com/in/josephzme/"
               >LinkedIn</a
-            >
-            <a
-              class="indent"
-              target="_blank"
-              href="https://www.instagram.com/josephhhz/"
-              >Instagram</a
             >
           </div>
         </footer>
