--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
       </div>
       <div class="media">
         <!-- projects -->
+        <span class='portrait-container'>
+          <div class="portrait">
+            <img src="public/portrait.jpg" />
+            <p>A joyful photo of me laughing at a park ~ 07.17.20</p>
+          </div>
+        </span class='portrait-container'>
         <div class="aiga hoverCard">
           <img src="public/aiga.jpg" />
           <p>
