--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <span class='portrait-container'>
           <div class="portrait">
             <img src="public/portrait.jpg" />
-            <p>A photo of me laughing at a park ~ 07.17.20</p>
+            <p>Photo taken July 07, 2020 in Saratoga, California</p>
           </div>
         </span class='portrait-container'>
         <div class="aiga hoverCard">
