--- a/index.html
+++ b/index.html
@@ -102,23 +102,24 @@
         <div class="row">
           <p>Experience</p>
           <div>
-            <div class="experience">
-              <a class="natural" target="_blank" href="https://www.natural.ai/"
-                >Brain Technologies</a
-              >
-              <p>
-                Interface Design Intern<br />
-                09.2020 - 05.2021
-              </p>
-            </div>
+
             <div class="experience">
               <a class="apple" target="blank" href="https://www.apple.com/siri/"
                 >Apple</a
               >
               <p>
                 Interaction Design Intern<br />
-                <!-- 05.2021 - Present<br /> -->
-                05.2020 - 08.2020
+                05.2021 – Present<br />
+                05.2020 – 08.2020
+              </p>
+            </div>
+            <div class="experience">
+              <a class="natural" target="_blank" href="https://www.natural.ai/"
+                >Brain Technologies</a
+              >
+              <p>
+                Interface Design Intern<br />
+                09.2020 – 05.2021
               </p>
             </div>
 
@@ -131,7 +132,7 @@
               >
               <p>
                 Research Assistant<br />
-                01.2020 - 05.2020
+                01.2020 – 05.2020
               </p>
             </div>
 
@@ -144,7 +145,7 @@
               >
               <p>
                 UX Design Intern<br />
-                05.2019 - 08.2019
+                05.2019 – 08.2019
               </p>
             </div>
           </div>
@@ -191,8 +192,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Interactive website relating NYT Best Selling books and Google
-            Trends
+            Interactive website that associates Google Trends to relevant NYT Best Selling books
           </p>
         </div>
         <div class="pixel-push hoverCard">
