--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p>Joseph Z</p>
           <p>
             I'm a designer exploring interaction, data, and conversation. I
-            experiment with new ways for people to engage with user interfaces.
+            experiment with new ways for people to engage with interfaces.
             Through my work, I strive to humanize complex ideas and questions.
             <br /><br />Currently, I'm a third-year undergraduate studying
             <a
@@ -223,8 +223,9 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Designed platform-level voice UI patterns based on a core technology
-            enhancement
+            S20: Designed platform-level voice UI patterns based on core technology
+            enhancement<br>
+            S21: Working on Siri Knowldege
           </p>
         </div>
 
