--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <p>
             S20: Designed platform-level voice UI patterns based on core technology
             enhancement<br>
-            S21: Working on Siri Knowldege
+            S21: Working on Siri Knowledge
           </p>
         </div>
 
