--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                 >Elevation Connect</a
               ></span
             >
-            <span
+            <!-- <span
               ><a
                 class="plume"
                 target="_blank"
                 href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
                 >Plume Assistant</a
               ></span
-            >
+            > -->
 
             <span>
               <a
@@ -223,16 +223,16 @@
             Your browser does not support HTML video.
           </video>
           <p>
+            S21: Working on Siri Knowledge<br>
             S20: Designed platform-level voice UI patterns based on core technology
-            enhancement<br>
-            S21: Working on Siri Knowledge
+            enhancement
           </p>
         </div>
 
-        <div class="plume hoverCard">
+        <!-- <div class="plume hoverCard">
           <img src="public/plume.jpg" />
           <p>Designing voice assistants for people with Parkinson's Disease</p>
-        </div>
+        </div> -->
         <!-- experiences  -->
         <div class="elevation-church hoverCard">
           <img src="public/elevation-church.jpg" />
