--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
         <!-- projects -->
         <span class='portrait-container'>
           <div class="portrait">
-            <img src="public/portrait.jpg" />
-            <p>Photo taken July 07, 2020 in Saratoga, California</p>
+            <img src="public/portrait-2.jpg" />
+            <p>Photo taken May 31, 2021 in Santa Cruz, California</p>
           </div>
         </span class='portrait-container'>
         <div class="aiga hoverCard">
