--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
       </div>
       <div class="media">
         <!-- projects -->
-        <span class='portrait-container'>
+        <!-- <span class='portrait-container'>
           <div class="portrait">
             <img src="public/portrait-2.jpg" />
             <p>Photo taken May 31, 2021 in Santa Cruz, California</p>
           </div>
-        </span class='portrait-container'>
+        </span class='portrait-container'> -->
         <div class="aiga hoverCard">
           <img src="public/aiga.jpg" />
           <p>
