--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Collaborative painting experience using sounds, textures, and colors
+            Collaborative art experience that explores painting with webcam images and sound recognition 
           </p>
         </div>
 
