--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Interactive website that associates Google Trends to relevant NYT Best Selling books
+            Data visualization drawing relationships between Google Trends and NYT Best Selling books in 2019
           </p>
         </div>
         <div class="pixel-push hoverCard">
@@ -201,7 +201,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Collaborative art experience that explores painting with webcam images and sound recognition 
+            Collaborative painting experience exploring webcam image-capture and sound recognition
           </p>
         </div>
 
