--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" href="circle.png" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
+    
   </head>
 
   <body class="index">
@@ -27,10 +28,8 @@
         <div class="row">
           <p>Joseph Z</p>
           <p>
-            I'm a designer exploring interaction, data, and conversation. I
-            experiment with new ways for people to engage with interfaces.
-            Through my work, I strive to humanize complex ideas and questions.
-            <br /><br />Currently, I'm a third-year undergraduate studying
+            I'm a designer exploring interaction, data, and conversation. I experiment with new ways for people to engage with interfaces. Through my work, I strive to humanize complex ideas and questions. 
+            <br /><br />Currently, I'm a fourth-year undergraduate studying
             <a
               class="cmu-design"
               target="blank"
@@ -40,8 +39,7 @@
             and
             <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
               >Human-Computer Interaction</a
-            >
-            at Carnegie Mellon University.
+            > at Carnegie Mellon University.
           </p>
         </div>
         <div class="row">
@@ -71,15 +69,6 @@
                 >Elevation Connect</a
               ></span
             >
-            <!-- <span
-              ><a
-                class="plume"
-                target="_blank"
-                href="https://www.notion.so/josephhhz/Plume-Assistant-d61c26e81f974c8493ebf880a0791440"
-                >Plume Assistant</a
-              ></span
-            > -->
-
             <span>
               <a
                 class="reading-trends"
@@ -88,7 +77,6 @@
                 >Reading Trends</a
               ></span
             >
-
             <span
               ><a
                 class="pixel-push"
@@ -167,13 +155,6 @@
         </footer>
       </div>
       <div class="media">
-        <!-- projects -->
-        <!-- <span class='portrait-container'>
-          <div class="portrait">
-            <img src="public/portrait-2.jpg" />
-            <p>Photo taken May 31, 2021 in Santa Cruz, California</p>
-          </div>
-        </span class='portrait-container'> -->
         <div class="aiga hoverCard">
           <img src="public/aiga.jpg" />
           <p>
@@ -215,8 +196,6 @@
             discussion-based contexts
           </p>
         </div>
-
-        <!-- <img class="apple hoverCard" src="public/apple.jpg" /> -->
         <div class="apple hoverCard">
           <video playsinline loop muted>
             <source src="public/apple.mp4" type="video/mp4" />
@@ -228,12 +207,6 @@
             enhancement
           </p>
         </div>
-
-        <!-- <div class="plume hoverCard">
-          <img src="public/plume.jpg" />
-          <p>Designing voice assistants for people with Parkinson's Disease</p>
-        </div> -->
-        <!-- experiences  -->
         <div class="elevation-church hoverCard">
           <img src="public/elevation-church.jpg" />
           <p>
@@ -268,5 +241,6 @@
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
   ></script>
+  
   <script src="script/imageHover.js"></script>
 </html>
