--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a
                 class="aiga"
                 target="_blank"
-                href="https://www.notion.so/josephhhz/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+                href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
                 >AIGA & Hue</a
               ></span
             >
@@ -57,7 +57,7 @@
               <a
                 class="thinkspace"
                 target="_blank"
-                href="https://www.notion.so/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+                href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
                 >Thinkspace</a
               ></span
             >
@@ -65,7 +65,7 @@
               <a
                 class="elevation-connect"
                 target="_blank"
-                href="https://www.notion.so/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+                href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
                 >Elevation Connect</a
               ></span
             >
@@ -73,7 +73,7 @@
               <a
                 class="reading-trends"
                 target="_blank"
-                href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+                href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
                 >Reading Trends</a
               ></span
             >
@@ -81,7 +81,7 @@
               ><a
                 class="pixel-push"
                 target="_blank"
-                href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+                href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
                 >Pixel Push</a
               ></span
             >
