border radius consistency

--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
           <img src="public/cmu-design.jpg" />
           <p>My cute design cohort + some cool professors</p>
         </div>
-        <img class="hci hoverCard" src="public/hci.jpg" />
+        <div class="hci hoverCard">
+          <img src="public/hci.jpg" />
+        </div>
+
         <div class="hci-research hoverCard">
           <img src="public/hci-research.jpg" />
           <p>
