--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
           <p>Joseph Z</p>
           <p>
-            I'm a designer exploring interaction, data, and conversation. I experiment with new ways for people to engage with interfaces. Through my work, I strive to humanize complex ideas and questions. 
+            I'm a systems designer particularly interested in interaction, data, and conversational design. Through my work, I strive to humanize complex ideas and explore better ways for people to engage with interfaces.
             <br /><br />Currently, I'm a fourth-year undergraduate studying
             <a
               class="cmu-design"
@@ -84,6 +84,8 @@
                 href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
                 >Pixel Push</a
               ></span
+            >
+            <span
             >
           </div>
         </div>
@@ -217,8 +219,7 @@
         <div class="natural hoverCard">
           <img src="public/natural.jpg" />
           <p>
-            Worked on experimental hybrid speech-GUI experiences focused around
-            search
+            Designed and prototyped for multimodal speech-GUI experiences focused around search
           </p>
         </div>
         <div class="cmu-design hoverCard">
