--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       content="joseph, zhang, josephz, josephz.me, jxsephz, art , design, carnegie mellon, design, design, ux design, art, graphic design, interaction design, apple"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="circle.png" />
+    <link rel="icon" href="cursor.png" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
     
@@ -217,11 +217,15 @@
           </p>
         </div>
         <div class="natural hoverCard">
-          <img src="public/natural.jpg" />
+          <video playsinline loop muted>
+            <source src="public/natural.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
           <p>
-            Designed and prototyped for multimodal speech-GUI experiences focused around search
+            Designed and prototyped for multimodal speech-GUI experiences focused around search <br> [Product video by Brain]
           </p>
         </div>
+
         <div class="cmu-design hoverCard">
           <img src="public/cmu-design.jpg" />
           <p>My cute design cohort + some cool professors</p>
