--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            S21: Working on Siri Knowledge<br>
+            S21: Explored disambiguation and correction patterns in Siri Knowledge<br>
             S20: Designed platform-level voice UI patterns based on core technology
             enhancement
           </p>
@@ -222,7 +222,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Designed and prototyped for multimodal speech-GUI experiences focused around search <br> [Product video by Brain]
+            Designed and prototyped for multimodal speech-GUI experiences focused around search <br> [Video credits: Brain Technologies]
           </p>
         </div>
 
