--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 >Brain Technologies</a
               >
               <p>
-                Interface Design Intern<br />
+                Product Design Intern<br />
                 09.2020 – 05.2021
               </p>
             </div>
@@ -134,7 +134,7 @@
                 >Elevation Church</a
               >
               <p>
-                UX Design Intern<br />
+                Product Design Intern<br />
                 05.2019 – 08.2019
               </p>
             </div>
