--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
           <p>Joseph Z</p>
           <p>
-            I'm an interaction designer particularly interested in systems, data, and conversation. Through my work, I strive to humanize complex ideas and explore more natural ways for people to engage with interfaces.
+            I'm an interaction designer particularly interested in systems, data, and conversation. Through my work, I explore novel ways to visualize information and interact with interfaces.
             <br /><br />Currently, I'm a fourth-year undergraduate studying
             <a
               class="cmu-design"
