--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               >
               <p>
                 Interaction Design Intern<br />
-                05.2021 – Present<br />
+                05.2021 – 08.2021<br />
                 05.2020 – 08.2020
               </p>
             </div>
@@ -199,13 +199,10 @@
           </p>
         </div>
         <div class="apple hoverCard">
-          <video playsinline loop muted>
-            <source src="public/apple.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
+          <img src="public/apple.jpg" />
           <p>
-            S21: Explored disambiguation and correction patterns in Siri Knowledge<br>
-            S20: Designed platform-level voice UI patterns based on core technology
+            2021: Designed disambiguation and correction patterns for multimodal experiences<br>
+            2020: Designed platform-level voice UI patterns based on core technology
             enhancement
           </p>
         </div>
@@ -222,7 +219,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Designed and prototyped for multimodal speech-GUI experiences focused around search <br> [Video credits: Brain Technologies]
+            Designed and prototyped multimodal interactions focused around navigation and search <br> [Video credits: Brain Technologies]
           </p>
         </div>
 
