--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="row">
           <p>Joseph Z</p>
           <p>
-            I'm an interaction designer particularly interested in systems, data, and conversation. Through my work, I explore different ways to visualize information and interact with interfaces.
+            I'm a designer interested in all things related to systems, products, and information design. Through my work, I explore different ways to visualize information and interact with interfaces.
             <br /><br />Currently, I'm a fourth-year undergraduate studying
             <a
               class="cmu-design"
               target="blank"
               href="https://design.cmu.edu/programs/undergrad"
-              >Design</a
+              >Communication Design</a
             >
             and
             <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
