fix resume link

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
               >Email</a
             >
-            <a class="indent" target="_blank" href="resume-zhang.pdf">Resume</a>
+            <a class="indent" target="_blank" href="josephzhang-resume.pdf">Resume</a>
             <a
               class="indent"
               target="_blank"
