--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
           <p>Joseph Z</p>
           <p>
-            I'm a designer interested in all things related to systems, products, and information design. Through my work, I explore different ways to visualize information and interact with interfaces.
+            I'm a designer interested in all things related to systems, products, and multimodal interaction. Through my work, I explore different ways to visualize information and interact with interfaces.
             <br /><br />Currently, I'm a fourth-year undergraduate studying
             <a
               class="cmu-design"
@@ -201,7 +201,7 @@
         <div class="apple hoverCard">
           <img src="public/apple.jpg" />
           <p>
-            2021: Designed disambiguation and correction patterns for multimodal experiences<br>
+            2021: Designed multimodal disambiguation patterns for various hardware platforms<br>
             2020: Designed platform-level voice UI patterns based on core technology
             enhancement
           </p>
@@ -219,7 +219,7 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Designed and prototyped multimodal interactions focused around navigation and search <br> [Video credits: Brain Technologies]
+            Designed future-facing product domains and multimodal interactions focused around navigation and search <br> [Video credits: Brain Technologies]
           </p>
         </div>
 
