--- a/index.html
+++ b/index.html
@@ -19,191 +19,137 @@
     <link rel="icon" href="cursor.png" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
-    
   </head>
 
   <body class="index">
     <div class="landing">
-      <div class="row-container">
-        <div class="row">
-          <p>Joseph Z</p>
-          <p>
-            I'm a designer interested in all things related to systems, products, and multimodal interaction. Through my work, I explore different ways to visualize information and interact with interfaces.
-            <br /><br />Currently, I'm a fourth-year undergraduate studying
-            <a
-              class="cmu-design"
-              target="blank"
-              href="https://design.cmu.edu/programs/undergrad"
-              >Communication Design</a
-            >
-            and
-            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-              >Human-Computer Interaction</a
-            > at Carnegie Mellon University.
-          </p>
-        </div>
-        <div class="row">
-          <p>Work</p>
-          <div class="projects">
-            <span>
-              <a
-                class="aiga"
-                target="_blank"
-                href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-                >AIGA & Hue</a
-              ></span
-            >
-            <span>
-              <a
-                class="thinkspace"
-                target="_blank"
-                href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-                >Thinkspace</a
-              ></span
-            >
-            <span>
-              <a
-                class="elevation-connect"
-                target="_blank"
-                href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-                >Elevation Connect</a
-              ></span
-            >
-            <span>
-              <a
-                class="reading-trends"
-                target="_blank"
-                href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-                >Reading Trends</a
-              ></span
-            >
-            <span
-              ><a
-                class="pixel-push"
-                target="_blank"
-                href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-                >Pixel Push</a
-              ></span
-            >
-            <span
-            >
-          </div>
-        </div>
-        <div class="row">
-          <p>Experience</p>
-          <div>
-
-            <div class="experience">
-              <a class="apple" target="blank" href="https://www.apple.com/siri/"
-                >Apple</a
-              >
-              <p>
-                Interaction Design Intern<br />
-                05.2021 – 08.2021<br />
-                05.2020 – 08.2020
-              </p>
-            </div>
-            <div class="experience">
-              <a class="natural" target="_blank" href="https://www.natural.ai/"
-                >Brain Technologies</a
-              >
-              <p>
-                Product Design Intern<br />
-                09.2020 – 05.2021
-              </p>
-            </div>
-
-            <div class="experience">
-              <a
-                class="hci-research"
-                target="blank"
-                href="https://www.hcii.cmu.edu"
-                >CMU HCI Institute</a
-              >
-              <p>
-                Research Assistant<br />
-                01.2020 – 05.2020
-              </p>
-            </div>
-
-            <div class="experience">
-              <a
-                class="elevation-church"
-                target="_blank"
-                href="https://www.elevationchurch.org/"
-                >Elevation Church</a
-              >
-              <p>
-                Product Design Intern<br />
-                05.2019 – 08.2019
-              </p>
-            </div>
-          </div>
-        </div>
-        <footer class="row">
-          <span></span>
-          <div class="contact">
-            <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
-              >Email</a
-            >
-            <a class="indent" target="_blank" href="josephzhang-resume.pdf">Resume</a>
-            <a
-              class="indent"
-              target="_blank"
-              href="https://www.linkedin.com/in/josephzme/"
-              >LinkedIn</a
-            >
-          </div>
-        </footer>
+      <div class="about">
+        <b style="margin-bottom: 10px">Joseph Z</b>
+        <br />
+        <p>
+          I'm a designer interested in all things related to systems, products,
+          and multimodal interaction. Through my work, I explore different ways
+          to visualize information and interact with computer interfaces.
+          Currently, I'm a fourth-year undergraduate studying
+          <a
+            class="cmu-design"
+            target="blank"
+            href="https://design.cmu.edu/programs/undergrad"
+            >Communication Design</a
+          >
+          and
+          <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+            >Human-Computer Interaction</a
+          >
+          at Carnegie Mellon University. <br /><br />Previously I designed
+          multimodal experiences at
+          <a target="_blank" href="https://www.apple.com">Apple</a> and
+          <a target="_blank" href="https://www.natural.ai"
+            >Brain Technologies</a
+          >
+          and designed social experiences at
+          <a target="_blank" href="https://www.elevationchurch.org"
+            >Elevation Church</a
+          >.
+        </p>
       </div>
-      <div class="media">
-        <div class="aiga hoverCard">
-          <img src="public/aiga.jpg" />
-          <p>
-            Interactive data visualization of +9400 designers from AIGA's design
-            census
-          </p>
-        </div>
-        <div class="elevation-connect hoverCard">
-          <img src="public/elevation-connect.jpg" />
-          <p>Web app designed to help people join communities in the church</p>
-        </div>
 
-        <div class="reading-trends hoverCard">
-          <video playsinline loop muted>
-            <source src="public/reading-trends.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <p>
-            Data visualization drawing relationships between Google Trends and NYT Best Selling books in 2019
-          </p>
+      <footer>
+        <span></span>
+        <div class="contact">
+          <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
+            >Email</a
+          >
+          <a class="indent" target="_blank" href="josephzhang-resume.pdf"
+            >Resume</a
+          >
+          <a
+            class="indent"
+            target="_blank"
+            href="https://www.linkedin.com/in/josephzme/"
+            >LinkedIn</a
+          >
         </div>
-        <div class="pixel-push hoverCard">
-          <video playsinline loop muted>
+      </footer>
+
+      <div class="media">
+        <a
+          target="_blank"
+          href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+          class="aiga hoverCard"
+        >
+          <img src="public/aiga.jpg" />
+          <!-- <p> -->
+
+          <span
+            ><b>Aiga & Hue</b> / Interactive data visualization of +9400
+            designers from AIGA's design census</span
+          >
+          <!-- </p> -->
+        </a>
+        <a
+          target="_blank"
+          href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+          class="elevation-connect hoverCard"
+        >
+          <img src="public/elevation-connect.jpg" />
+          <span
+            ><b>Elevation Connect</b> / Web app designed to help people join
+            communities in the church</span
+          >
+        </a>
+        <a
+          target="_blank"
+          href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+          class="pixel-push hoverCard"
+        >
+          <video playsinline autoplay loop muted>
             <source src="public/pixel-push.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
-          <p>
-            Collaborative painting experience exploring webcam image-capture and sound recognition
-          </p>
-        </div>
+          <span>
+            <b>Pixel Push</b> / Collaborative painting experience exploring
+            webcam image-capture and sound recognition
+          </span>
+        </a>
 
-        <div class="thinkspace hoverCard">
-          <video playsinline loop muted>
+        <a
+          target="_blank"
+          href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+          class="reading-trends hoverCard"
+        >
+          <video playsinline autoplay loop muted>
+            <source src="public/reading-trends.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <span>
+            <b>Reading Trends</b> / Data visualization drawing relationships
+            between Google Trends and NYT Best Selling books in 2019
+          </span>
+        </a>
+
+        <a
+          target="_blank"
+          href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+          class="thinkspace hoverCard"
+        >
+          <video playsinline autoplay loop muted>
             <source src="public/thinkspace.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
-          <p>
-            A speculative exploration of conversational agents in
-            discussion-based contexts
-          </p>
-        </div>
-        <div class="apple hoverCard">
+          <span>
+            <b>Thinkspace</b> / A speculative exploration of conversational
+            agents in discussion-based contexts
+          </span>
+        </a>
+
+        <!-- <div class="apple hoverCard">
           <img src="public/apple.jpg" />
           <p>
-            2021: Designed multimodal disambiguation patterns for various hardware platforms<br>
-            2020: Designed platform-level voice UI patterns based on core technology
-            enhancement
+            2021: Designed multimodal disambiguation patterns for various
+            hardware platforms<br />
+            2020: Designed platform-level voice UI patterns based on core
+            technology enhancement
           </p>
         </div>
         <div class="elevation-church hoverCard">
@@ -219,7 +165,9 @@
             Your browser does not support HTML video.
           </video>
           <p>
-            Designed future-facing product domains and multimodal interactions focused around navigation and search <br> [Video credits: Brain Technologies]
+            Designed future-facing product domains and multimodal interactions
+            focused around navigation and search <br />
+            [Video credits: Brain Technologies]
           </p>
         </div>
 
@@ -237,15 +185,15 @@
             Conducted HRI field research focused on navigating stuck-robot
             situations
           </p>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
-  <script
+  <!-- <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
-  ></script>
-  
-  <script src="script/imageHover.js"></script>
+  ></script> -->
+
+  <!-- <script src="script/imageHover.js"></script> -->
 </html>
