--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
           and designed social experiences at
           <a target="_blank" href="https://www.elevationchurch.org"
             >Elevation Church</a
-          >.
+          >. In my free time, I like chasing sunrises, eating tacos, and
+          scouring Facebook Marketplace for the next best furniture deal.
         </p>
       </div>
 
@@ -82,7 +83,7 @@
           <!-- <p> -->
 
           <span
-            ><b>Aiga & Hue</b> / Interactive data visualization of +9400
+            ><b>AIGA & Hue</b> / Interactive data visualization of +9400
             designers from AIGA's design census</span
           >
           <!-- </p> -->
